# nichescope

./: .env.example  .env.railway  .gitignore  .railwayignore  Dockerfile  INFLUENCER_ONE_PAGER.md  README.md  docker-compose.yml  pyproject.toml  railway.json
alembic/: alembic.ini
certs/: uber-corp-ca-bundle.pem  zscaler-root-ca.pem
nichescope/: __init__.py  config.py  main.py
nichescope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nichescope/api/: __init__.py  auth.py  channels.py  gaps.py  insights.py  reports.py
nichescope/bot/: __init__.py  bot.py  formatters.py  handler.py  pipeline.py  support_commands.py  watch_commands.py
nichescope/bot/commands/: __init__.py  analyze.py  brief.py  calendar.py  collabs.py  demands.py  formats.py  gaps.py  general_message.py  rival.py  start.py  titlescore.py  trending.py
nichescope/chrome_extension/: manifest.json
nichescope/chrome_extension/background/: service_worker.js
nichescope/chrome_extension/content/: youtube_studio.css  youtube_studio.js
nichescope/chrome_extension/popup/: popup.css  popup.html  popup.js
nichescope/db/: __init__.py  models.py  seed.py  session.py
nichescope/jobs/: __init__.py  compute_gaps.py  detect_anomalies.py  enrich_videos.py  poll_rss.py  scheduler.py  send_briefs.py
nichescope/models/: __init__.py  base.py  channel.py  topic.py  user.py  video.py
nichescope/services/: __init__.py  channel_ingester.py  chat_prefs.py  collab_graph.py  comment_demand.py  competitor_radar.py  digest.py  format_intel.py  gap_analyzer.py  guardrails.py  insights_engine.py  llm.py  niche_discoverer.py  notify.py  report_generator.py  rss_poller.py  seasonal_calendar.py  title_predictor.py  topic_clusterer.py  youtube.py  youtube_api.py
nichescope/utils/: errors.py
scripts/: quota_monitor.py  seed_demo.py
tests/: test_bot_commands.py  test_collab_graph.py  test_comment_demand.py  test_format_intel.py  test_gap_analyzer.py  test_insight_formatters.py  test_rss_poller.py  test_seasonal_calendar.py  test_title_predictor.py  test_topic_clusterer.py  test_youtube_api.py
