[project]
name = "nichescope"
version = "2.0.0"
description = "YouTube channel intelligence bot — LLM-powered, zero regex"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-telegram-bot[job-queue]>=20.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "google-api-python-client>=2.100.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "sentry-sdk[fastapi]>=2.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
